--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <meta property="og:title" content="Squad Reality Project">
       <meta property="og:type" content="website">
       <meta property="og:description" content="Игровой проект по игре Squad, основная цель которого проведения MilSim ивентов в формате одной жизни.">
-      <meta property="og:image" content="https://squadreality.xyz/assets/images/card.jpeg">
+      <meta property="og:image" content="https://squadreality.xyz/assets/card.jpeg">
       <meta property="og:image:type" content="image/jpeg">
       <meta property="og:image:width" content="1280">
       <meta property="og:image:height" content="800">
