--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <title>Squad Reality Project</title>
       <meta name="viewport" content="width=device-width,initial-scale=1">
-      <meta name="description" content="Игровой проект по игре Squad, основная цель которого проведения MilSim ивентов в формате одной жизни.">
+      <meta name="description" content="Игровой проект по игре Squad, основная цель которого - проведение MilSim ивентов в формате одной жизни.">
       <meta property="og:site_name" content="Squad Reality Project">
       <meta property="og:title" content="Squad Reality Project">
       <meta property="og:type" content="website">
-      <meta property="og:description" content="Игровой проект по игре Squad, основная цель которого проведения MilSim ивентов в формате одной жизни.">
+      <meta property="og:description" content="Игровой проект по игре Squad, основная цель которого - проведение MilSim ивентов в формате одной жизни.">
       <meta property="og:image" content="https://squadreality.xyz/assets/card.jpeg">
       <meta property="og:image:type" content="image/jpeg">
       <meta property="og:image:width" content="1280">
@@ -49,7 +49,7 @@
                         <div id="image04" class="image"><span class="frame"><img src="./assets/image04.png" alt=""></span></div>
                         <h1 id="text01">Squad Reality Project</h1>
                         <hr id="divider03">
-                        <p id="text04">Игровой проект по игре Squad, основная цель которого проведения MilSim ивентов в формате одной жизни.</p>
+                        <p id="text04">Игровой проект по игре Squad, основная цель которого - проведение MilSim ивентов в формате одной жизни.</p>
                      </div>
                   </div>
                </div>
