--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                      </a>
                   </li>
                   <li>
-                     <a class="n02" href="mailto:squadrealityproject@gmail.com">
+                     <a class="n02" href="mailto:admin@squadreality.xyz">
                         <svg>
                            <use xlink:href="#icon-c3c8e1063e3b7f84f6b54712741de139"></use>
                         </svg>
@@ -132,7 +132,7 @@
                      </a>
                   </li>
                   <li>
-                     <a class="n03" href="https://www.youtube.com/channel/UCfphOZLQWwWeG21D7IumESg">
+                     <a class="n03" href="https://www.youtube.com/@squadrealityproject">
                         <svg>
                            <use xlink:href="#icon-e2a43bdcfd2e22a246a1598df579c4ad"></use>
                         </svg>
@@ -140,7 +140,7 @@
                      </a>
                   </li>
                   <li>
-                     <a class="n04" href="https://discord.com/invite/squad-reality-project-655648639405785099">
+                     <a class="n04" href="https://discord.gg/squad-reality-project">
                         <svg>
                            <use xlink:href="#icon-3b7eeeccbb457780f277fce4669f67a0"></use>
                         </svg>
