--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
          <symbol id="icon-3b7eeeccbb457780f277fce4669f67a0" viewBox="0 0 40 40">
             <path d="M33.2,8.3c-2.5-1.1-5.1-1.9-7.9-2.4c-0.3,0.6-0.7,1.4-1,2c-2.9-0.4-5.8-0.4-8.7,0c-0.3-0.6-0.7-1.4-1-2 c-2.8,0.5-5.4,1.3-7.9,2.4c-5,7.2-6.3,14.2-5.6,21.1c3.3,2.3,6.5,3.8,9.6,4.7c0.8-1,1.5-2.1,2.1-3.3c-1.1-0.4-2.2-0.9-3.2-1.5 c0.3-0.2,0.5-0.4,0.8-0.6c6.3,2.8,13,2.8,19.2,0c0.3,0.2,0.5,0.4,0.8,0.6c-1,0.6-2.1,1.1-3.2,1.5c0.6,1.1,1.3,2.2,2.1,3.3 c3.1-0.9,6.3-2.4,9.6-4.7C39.7,21.4,37.5,14.4,33.2,8.3z M13.7,25.1c-1.9,0-3.4-1.7-3.4-3.7s1.5-3.7,3.4-3.7c1.9,0,3.5,1.7,3.4,3.7 C17.1,23.4,15.6,25.1,13.7,25.1z M26.3,25.1c-1.9,0-3.4-1.7-3.4-3.7s1.5-3.7,3.4-3.7c1.9,0,3.5,1.7,3.4,3.7 C29.7,23.4,28.2,25.1,26.3,25.1z"></path>
          </symbol>
+         <symbol id="icon-vk" viewBox="0 0 40 40">
+            <path d="M 87.935 21.894 c 0.626 -2.086 0 -3.619 -2.977 -3.619 h -9.846 c -2.504 0 -3.658 1.324 -4.283 2.785 c 0 0 -5.008 12.204 -12.101 20.132 c -2.294 2.295 -3.337 3.026 -4.59 3.026 c -0.625 0 -1.531 -0.731 -1.531 -2.816 V 21.894 c 0 -2.503 -0.727 -3.619 -2.813 -3.619 H 34.32 c -1.564 0 -2.506 1.162 -2.506 2.264 c 0 2.373 3.547 2.921 3.913 9.597 v 14.499 c 0 3.179 -0.574 3.757 -1.826 3.757 c -3.337 0 -11.457 -12.26 -16.273 -26.288 c -0.944 -2.727 -1.89 -3.828 -4.406 -3.828 H 3.376 C 0.562 18.275 0 19.599 0 21.059 c 0 2.608 3.337 15.543 15.542 32.65 c 8.136 11.682 19.599 18.016 30.031 18.016 c 6.258 0 7.033 -1.407 7.033 -3.83 v -8.829 c 0 -2.814 0.593 -3.375 2.575 -3.375 c 1.46 0 3.963 0.729 9.805 6.362 c 6.676 6.676 7.776 9.671 11.532 9.671 h 9.846 c 2.812 0 4.219 -1.407 3.408 -4.182 c -0.889 -2.767 -4.076 -6.781 -8.305 -11.538 c -2.295 -2.712 -5.738 -5.633 -6.781 -7.094 c -1.461 -1.877 -1.043 -2.711 0 -4.381 C 74.687 44.53 86.684 27.631 87.935 21.894" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(0,0,0); fill-rule: evenodd; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
+         </symbol>
       </svg>
       <div id="wrapper">
          <div id="main">
@@ -145,6 +148,14 @@
                            <use xlink:href="#icon-3b7eeeccbb457780f277fce4669f67a0"></use>
                         </svg>
                         <span class="label">Discord</span>
+                     </a>
+                  </li>
+                  <li>
+                     <a class="n05" href="https://vk.com/squadreality">
+                        <svg>
+                           <use xlink:href="#icon-vk"></use>
+                        </svg>
+                        <span class="label">Vkontakte</span>
                      </a>
                   </li>
                </ul>
